- 
    Bug 
- 
    Resolution: Done
- 
    P3: Somewhat important 
- 
    5.9.0
- 
    None
- 
    Windows 10/x64
 
 MSVC 2015 Update 3
 
 
- 
        df32c9a1127cfec15aab834cc2df363fa49ca5bd (qtbase/5.9, 8.6.2017, 5.9.1)
If configure is run with -no-feature-tabletevent
than these errors occurs on build:
{{.\qwindowstabletsupport.cpp(273): error C2653: 'QTabletEvent': is not a class or namespace name}}
{{.\qwindowstabletsupport.cpp(273): error C2433: 'TabletDevice': 'inline' not permitted on data declarations}}
{{.\qwindowstabletsupport.cpp(273): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int}}
{{.\qwindowstabletsupport.cpp(273): error C2146: syntax error: missing ';' before identifier 'deviceType'}}
{{.\qwindowstabletsupport.cpp(274): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int}}
{{.\qwindowstabletsupport.cpp(276): error C2653: 'QTabletEvent': is not a class or namespace name}}
{{.\qwindowstabletsupport.cpp(276): error C2065: 'Stylus': undeclared identifier}}
{{.\qwindowstabletsupport.cpp(278): error C2653: 'QTabletEvent': is not a class or namespace name}}
(and a lot more)
The idea behind disabling of tablet events:
 - we have a few user reports when platform init takes a very long time (20-30 seconds) if some version of Wacom Bamboo drivers is installed and tablet is not connected.
 - current version of our software uses Qt 5.4 and do not use tablet input
 - so we opted to build 5.4 with DEFINES+=QT_NO_TABLETEVENT
And everything works fine.
With 5.9 we tried to use documented way to do that (-no-feature-tabletevent when build) but failed
It looks like ---no-feature-tabletevent should define QT_NO_TABLETEVENT too.
- relates to
- 
                    QTBUG-69601 QAxServer Crash -           
- Closed
 
-