Windows QPA: Port to new feature system

Replace all checks for DEFINES in windows.pri by proper
configure system checks as they no longer seem to work.

Task-number: QTBUG-61192
Change-Id: I625c9de0812fd376d06eacb065d3a32a499b6b00
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>